fix layout on mobiles

--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,81 @@
-body{
+body {
     background-color: #dad7cd;
-    height:100vh;
+    height: 100vh;
 }
 
-.heading{
-    font-size:3em;
-    font-family:'Times New Roman', sans-serif;
-    text-align:center;
-    margin-top:20px;
-    margin-bottom:60px;
+.heading {
+    font-size: 3em;
+    font-family: 'Times New Roman', sans-serif;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 60px;
 }
 
-.content{
-    display:flex;
+.content {
+    display: flex;
     justify-content: space-around;
     align-items: center;
-    height:500px;
+    height: 500px;
 }
 
-.inspector{
-    display:flex;
+.inspector {
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height:55%;
+    height: 55%;
+    min-width: 100px;
     width:15%;
-    border-radius:10px;
-    padding:16px;
+    border-radius: 10px;
+    padding: 16px;
     text-align: center;
-    background-color:#012a4a;
-    color:#a9d6e5;
-    font-weight:bolder;
+    background-color: #012a4a;
+    color: #a9d6e5;
+    font-weight: bolder;
 }
 
-.border{
+.border {
     border: 1px solid #a9d6e5;
 }
 
-.buttons p{
+.buttons p {
     border-radius: 5px;
-    padding:15px;
-    cursor:pointer;
+    padding: 15px;
+    cursor: pointer;
 }
 
-.colour-picker{
-    display:flex;
+.colour-picker {
+    display: flex;
     justify-content: space-around;
-    align-items:center;
-    height:20px;
-    font-size:1.3em;
+    align-items: center;
+    height: 20px;
+    font-size: 1.3em;
 }
 
-.colour-picker input{
-    padding:0;
-    border:0;
-    width:40%;
+.colour-picker input {
+    padding: 0;
+    border: 0;
+    width: 40%;
 }
 
-.slider-control{
-    width:65%;
+.slider-control {
+    width: 65%;
 }
 
-#rangeValue{
-    margin-bottom:0px;
+#rangeValue {
+    margin-bottom: 0px;
 }
 
-#grid{
+#grid {
     border: 10px solid slategray;
     background-color: whitesmoke;
-    display:flex;
-    flex-flow:wrap;
-    width:30%;
-    height:85%;
-    cursor:crosshair;
+    display: flex;
+    flex-flow: wrap;
+    min-width: 250px;
+    width: 30%;
+    height: 85%;
+    cursor: crosshair;
 }
 
-.line-break{
-    width:100%;
+.line-break {
+    width: 100%;
 }
